force-app/main/default/objects/Patient_Service__c/Patient_Service__c.object-meta.xml
<CustomObject>
    <description>Represents a clinical service or tool associated with a patient transaction.</description>
    <label>Patient Service</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Patient Service Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Services</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>