force-app/main/default/objects/Patient_Service__c/fields/Admission__c.field-meta.xml
<CustomField>
    <fullName>Admission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission</label>
    <referenceTo>Admission__c</referenceTo>
    <relationshipLabel>Patient Services</relationshipLabel>
    <relationshipName>Patient_Services</relationshipName>
    <type>Lookup</type>
</CustomField>