force-app/main/default/objects/Patient_Service__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Patient Services</relationshipLabel>
    <relationshipName>Patient_Services</relationshipName>
    <type>Lookup</type>
</CustomField>