force-app/main/default/objects/Patient_Service__c/fields/Clinical_Service__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Service</label>
    <referenceTo>Clinical_Service__c</referenceTo>
    <relationshipLabel>Patient Services</relationshipLabel>
    <relationshipName>Patient_Services</relationshipName>
    <type>Lookup</type>
</CustomField>