force-app/main/default/objects/Patient_Service__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Patient Services</relationshipLabel>
    <relationshipName>Patient_Services</relationshipName>
    <type>Lookup</type>
</CustomField>