force-app/main/default/objects/Patient_Service__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Patient Services</relationshipLabel>
    <relationshipName>Patient_Services</relationshipName>
    <type>Lookup</type>
</CustomField>