force-app/main/default/objects/Patient_Service__c/fields/Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Service_Price__c</fullName>
    <formula>Clinical_Service__r.Standard_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>